--- a/styles/index.css
+++ b/styles/index.css
@@ -6,5 +6,30 @@ body {
 }
 
 main {
-    background-color: rgb(133, 178, 217);
+}
+
+.dog-display {
+    position: relative;
+    text-align: left;
+    width: 100%;
+}
+
+.dog-profile-picture {
+    width: 100%;
+    height: 100px;
+}
+
+.detail {
+    position: absolute;
+    left: 16px;
+    background-color: aqua;
+    font-family: 'Poppins', Tahoma, sans-serif;
+}
+
+.dog-name {
+    bottom: 40px;
+}
+
+.dog-opener {
+    bottom: 20px;
 }
