--- a/styles/index.css
+++ b/styles/index.css
@@ -8,28 +8,84 @@ body {
 main {
 }
 
-.dog-display {
-    position: relative;
-    text-align: left;
+header {
+    height: 5em;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+header img {
+    height: 2.525em;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-left: 1.25em;
+    padding-right: 1.25em;
 }
 
-.dog-profile-picture {
-    width: 100%;
-    height: 100px;
+.dog-display {
+    position: absolute;
+    top: 5em;
+    bottom: 8em;
+    left: .5em;
+    right: .5em;
+    overflow: hidden;
+    text-align: left;
+}
+
+.dog-display img {
+    height: 100%;
+    position: relative;
+    object-fit: fill;
+}
+
+.detail-overlay {
+    position: absolute;
+    bottom: 30px;
+    left: 18px;
+    font-weight: bold;
+    text-align: left;
 }
 
 .detail {
     position: absolute;
-    left: 16px;
-    background-color: aqua;
+    left: 1.4rem;
     font-family: 'Poppins', Tahoma, sans-serif;
+    color: white;
 }
 
 .dog-name {
-    bottom: 40px;
+    bottom: 1.8em;
 }
 
 .dog-opener {
-    bottom: 20px;
+    bottom: 1.2em;
+    color: #b7b7b7;
+}
+
+.interactions {
+    background-image: linear-gradient(red, yellow) ;
+
+    height: 8em;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    gap: 1.2em;
+}
+.interaction-button {
+    height: 5rem;
+    width: 5rem;
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+}
+
+.interaction-button img {
+    height: 2rem;
+    width: 2rem;
+    margin-left: auto;
+    margin-right: auto;
 }
